tests/chainsaw/check-cert-manager-route53-secret-sync/source-secret-update.yaml
apiVersion: v1
kind: Secret
metadata:
  name: test-cert-manager-user-secrets
  namespace: default
type: Opaque
data:
  aws-access-key: dXBkYXRlZGFrc2VjcmV0a2V5  # base64 encoded: updatedaksecretkey
  aws-secret-key: dXBkYXRlZGF3c3NlY3JldGtleXZhbHVl  # base64 encoded: updatedawssecretkeyvalue
  route53-zone-id: dXBkYXRlZHRlc3R6b25laWQ=  # base64 encoded: updatedtestzoneid
