tests/chainsaw/check-cert-manager-route53-secret-sync/target-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: org-test-namespace
