tests/chainsaw/check-cert-manager-route53-secret-sync/secret-sync-update-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: test-cert-manager-user-secrets
  namespace: org-test-namespace
type: Opaque
data:
  aws-access-key: dXBkYXRlZGFrc2VjcmV0a2V5
  aws-secret-key: dXBkYXRlZGF3c3NlY3JldGtleXZhbHVl
  route53-zone-id: dXBkYXRlZHRlc3R6b25laWQ=
